bad/assign_binop_ceq_string.example_compiler_output
ERROR
[1mbad/assign_binop_ceq_string.lat:8:9: [1;31merror: [0;1mleft side is not assignable[m
	x == y = "";
	       [1;32m^[m
[1mbad/assign_binop_ceq_string.lat:8:2: [1;34mnote: [0;1mleft side starts here[m
	x == y = "";
	[1;32m^[m
